--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -10,9 +10,45 @@
 // );
 
 .text-no-style {
-  text-transform: none !important;
-  letter-spacing: normal !important;
+  text-transform: none;
+  letter-spacing: normal;
   font-weight: 600;
   line-height: 25px;
   font-size: 0.80rem;
+}
+
+// estilos de scroll
+::-webkit-scrollbar {
+  height: 6px;
+  width: 6px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  -webkit-border-radius: 6px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 6px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  -webkit-border-radius: 6px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+  background: rgb(var(--v-theme-primary));
+  border-radius: 6px;
+}
+
+::-webkit-scrollbar-thumb:window-inactive {
+  background: rgb(var(--v-theme-primary));
+}
+
+// estilos tablas
+.v-data-table__thead {
+  color: #fff;
+  background-color: #1c1e4d;
+}
+
+.v-data-table-footer {
+  display: flex;
+  justify-content: center;
 }
